--- a/package.json
+++ b/package.json
@@ -31,15 +31,21 @@
     "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^9.13.0",
     "alova": "^3.3.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "element-resize-detector": "^1.2.4",
     "lodash-es": "^4.17.21",
+    "lucide-vue-next": "^0.544.0",
     "mockjs": "^1.1.0",
     "naive-ui": "^2.42.0",
     "pinia": "^2.3.1",
     "qs": "^6.14.0",
+    "reka-ui": "^2.5.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue-types": "^4.2.1"
