--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     ],
     "noImplicitAny": false,
     "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
     "paths": {
       "@/*": [
         "src/*"
